The refactor continues